<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <Button
                android:id="@+id/printer_btn"
                style="@style/buttonNumberStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_number_violet_shape"
                android:text="@string/printer_service" />

            <Button
                android:id="@+id/ic_btn"
                style="@style/buttonNumberStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_number_violet_shape"
                android:text="@string/ic_service" />


            <Button
                android:id="@+id/psam_btn"
                style="@style/buttonNumberStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_number_violet_shape"
                android:text="@string/psam_service" />

            <Button
                android:id="@+id/mag_btn"
                style="@style/buttonNumberStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_number_violet_shape"
                android:text="@string/magnetic_service" />
            <Button
                android:id="@+id/nfc_btn"
                style="@style/buttonNumberStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_number_violet_shape"
                android:text="@string/nfc_service" />
            <Button
                android:id="@+id/power_btn"
                style="@style/buttonNumberStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_number_violet_shape"
                android:text="@string/power_service" />
            <Button
                android:id="@+id/buzzer_btn"
                style="@style/buttonNumberStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_number_violet_shape"
                android:text="@string/buzzer_service" />

        </LinearLayout>

    </ScrollView>



</LinearLayout>