<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <Button
                android:id="@+id/emv_service_btn"
                style="@style/buttonNumberStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_number_violet_shape"
                android:text="@string/emv_service" />

            <Button
                android:id="@+id/common_sdk_btn"
                style="@style/buttonNumberStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_number_violet_shape"
                android:text="@string/commonsdk_service" />


            <Button
                android:id="@+id/osapi_btn"
                style="@style/buttonNumberStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_number_violet_shape"
                android:text="@string/osapi_service" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>