<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="15dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/cpu_btn"
            style="@style/buttonNumberStyle"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:background="@drawable/button_number_violet_shape"
            android:orientation="horizontal"
            android:text="@string/nfc_cpu_m1_test"
            android:onClick="onClick"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="15dp">
        </View>

        <Button
            android:id="@+id/mifare_desfire_btn"
            style="@style/buttonNumberStyle"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:background="@drawable/button_number_violet_shape"
            android:text="@string/nfc_mifare_desfire_test"
            android:onClick="onClick"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="15dp">
        </View>

        <Button
            android:id="@+id/felica_btn"
            style="@style/buttonNumberStyle"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:background="@drawable/button_number_violet_shape"
            android:text="@string/nfc_felica_test"
            android:onClick="onClick"/>



    </LinearLayout>

</LinearLayout>